test/official_tests/function/missing_arguments.lox
fun f(a, b) {}

f(1); // error: {"line":3,"message":"Function 'f' expected 2 arguments but got 1","type":"RuntimeError"}
